[package]
name = "gtrends34"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.32"
csv = "1.3.0"
thirtyfour = "0.31.0"
undetected-chromedriver = { git = "https://github.com/huds2/Rust-undetected-chromedriver.git", version = "0.1.3", branch="capabilities" }
